Fixed broken links
Links did not exist in this directory

--- a/Website(ThisOne).html
+++ b/Website(ThisOne).html
@@ -70,7 +70,7 @@ website
 </table>
 <hr />
 <p>It's a Form! (The Text Type)</p>
-<form action="C:\Users\Richard\Desktop\Program Website\form1.html" method="POST">
+<form action="form1.html" method="POST">
 	<p>
 		USERNAME
 		<input type="text" name="username" /><br />
@@ -83,7 +83,7 @@ website
 </form>
 <hr />
 <p>It's another form, radio input type.</p>
-<form action="C:\Users\Richard\Desktop\Program Website\form1.html" method="POST">
+<form action="form1.html" method="POST">
 	<input type="radio" name="gender" value="male" />Male <br />
 	<input type="radio" name="gender" value="female" />Female <br />
 	<input type="submit" value="Submit" />
@@ -117,7 +117,7 @@ Definetely Williams</a>
 	<p>Contents of article element</p>
 </article>
 <p>
-Quizlet site <a href="C:\Users\Richard\Desktop\Program Website\Quizlet.html" target="_blank">QUIZLET, Yahhhhh!</a>
+Quizlet site <a href="Quizlet.html" target="_blank">QUIZLET, Yahhhhh!</a>
 </p>
 </body>
 </html>
